freest/test/prog/Valid/Functional/CharBin/CharBin.fst
module CharBin where

main : ()
main = 
  let (x,y) = ('c','d') in
  print x
