freest/test/prog/Invalid/SessionTypes/WaitOnClose/WaitOnClose.fst
module WaitOnClose where

foo : Close -> ()
foo c = wait c